--- a/pt-BR/index.html
+++ b/pt-BR/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lodiped | pt-BR</title>
+    <title>Pedro Lodi Portfolio</title>
 
     <link rel="stylesheet" href="../main.css">
 
@@ -30,7 +30,7 @@
         <div></div>
         <div></div>
         <div class="english-button">
-            <a href="../en/index.html" data-reload>english</a>
+            <a href="../en/" data-reload>english</a>
         </div>
         <div class="portugues-button lang-active">
             <a data-reload>português</a>
