--- a/en/index.html
+++ b/en/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lodiped | en</title>
+    <title>Pedro Lodi Portfolio</title>
 
     <link rel="stylesheet" href="../main.css">
 
@@ -33,7 +33,7 @@
             <a data-reload>english</a>
         </div>
         <div class="portugues-button">
-            <a href="../pt-BR/index.html" data-reload>português</a>
+            <a href="../pt-BR/" data-reload>português</a>
         </div>
     </div>
     <div class="wrapper">
