--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <head>
-        <meta HTTP-EQUIV="REFRESH" content="0; url=/en/">
     </head>
+    <body>
+        <script src="redirect.js"></script>
+    </body>
 </html>
