--- a/pt-BR/index.html
+++ b/pt-BR/index.html
@@ -40,7 +40,7 @@
         <div id="main">
             <div id="title" class="title-style" data-div>
                 <h1 id="langTitle">Oi, sou Pedro Lodi.</h1>
-                <p id="langAboutMe">Sou formando em Design Gráfico e busco me especializar em modelagem 3D e web deisgn front-end.</p>
+                <p id="langAboutMe">Estou estudando Design Gráfico e busco me especializar em modelagem 3D e web design front-end.</p>
             </div>
             <div id="langScroll" class="scroll-advice">
                 Desça a página
