--- a/en/index.html
+++ b/en/index.html
@@ -39,9 +39,10 @@
     <div class="wrapper">
         <div id="main">
             <div id="title" class="title-style" data-div>
-                <h1 id="langTitle">Hi, I'm Pedro Lodi.</h1>
-                <p id="langAboutMe">I'm a Graphic Design student and I'm especializing in 3D modeling and Front-end web design.</p>
+                <h1 id="langTitle">Hi, I'm <span class="underline-name">Pedro Lodi</span>.</h1>
+                <p id="langAboutMe">I'm a <span class="underline-gd">Graphic Design</span> student specializing in <span class="underline-3d">3D modeling</span> and <span class="underline-web">front-end web design</span>.</p>
             </div>
+            <div class="background-logo"><img src="../images/logo.svg" alt=""></div>
             <div id="langScroll" class="scroll-advice">
                 Scroll Down
             </div>
@@ -55,8 +56,7 @@
                 <div class="bottom-card-info">
                     software: Blender 3D [icon].
                 </div>
-                <div id="front-card">
-                    image
+                <div id="front-card" class="image-1" onmouseover="translateBackcard()">
                 </div>
             </div>
 
@@ -70,8 +70,7 @@
                 <div class="bottom-card-info">
                     signature
                 </div>
-                <div id="front-card">
-                    image
+                <div id="front-card" class="image-2" onmouseover="translateBackcard();">
                 </div>
             </div>
 
@@ -85,8 +84,7 @@
                 <div class="bottom-card-info">
                     signature
                 </div>
-                <div id="front-card">
-                    image
+                <div id="front-card" class="image-3" onmouseover="translateBackcard();">
                 </div>
             </div>
 
@@ -100,8 +98,7 @@
                 <div class="bottom-card-info">
                     signature
                 </div>
-                <div id="front-card">
-                    image
+                <div id="front-card" class="image-4" onmouseover="translateBackcard()">
                 </div>
             </div>
         </div>
