--- a/en/index.html
+++ b/en/index.html
@@ -50,7 +50,7 @@
                     <h3 id="langTitle1">3D MODELING</h3>
                 </div>
                 <div class="description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, porro? Corporis deleniti explicabo pariatur cum iure suscipit voluptatem harum ratione, numquam, doloribus a obcaecati fugiat.
+                    My Blender journey began at the end of 2019. While I'm no expert, its tools are so familiar to me now I catch myself editing videos, images, and even sounds in it. I've created archviz projects, low-poly animations, game modding assets, and miscellaneous 3D printing pieces.
                 </div>
                 <div class="bottom-card-info">
                     software: Blender 3D [icon].
