--- a/en/index.html
+++ b/en/index.html
@@ -43,17 +43,15 @@
                 <p id="langAboutMe">I'm a <span class="underline-gd">Graphic Design</span> student specializing in <span class="underline-3d">3D modeling</span> and <span class="underline-web">front-end web design</span>.</p>
             </div>
             <div id="langScroll" class="scroll-advice">
-                Scroll Down
+                scroll down
             </div>
             <div id="card1" class="backcard" data-div>
                 <div class="title">
                     <h3 id="langTitle1">3D MODELING</h3>
-                </div>
-                <div class="description">
-                    My Blender journey began at the end of 2019. While I'm no expert, its tools are so familiar to me now I catch myself editing videos, images, and even sounds in it. I've created archviz projects, low-poly animations, game modding assets, and miscellaneous 3D printing pieces.
+                    Hard surface modeling &#8226 Archviz &#8226 Graphic Design support material &#8226 Texturing &  Procedural Shading &#8226 Animations &#8226 Game asset modding.
                 </div>
                 <div class="bottom-card-info">
-                    software: Blender 3D [icon].
+                    <img src="../images/blenderWhite.svg" alt="Blender icon">
                 </div>
                 <div id="front-card" class="image-1" onmouseover="translateBackcard()">
                 </div>
@@ -62,12 +60,10 @@
             <div id="card2" class="backcard" data-div>
                 <div class="title">
                     <h3 id="langTitle2">GRAPHIC DESIGN</h3>
-                </div>
-                <div class="description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, porro? Corporis deleniti explicabo pariatur cum iure suscipit voluptatem harum ratione, numquam, doloribus a obcaecati fugiat.
+                    Branding, Identity, & Logo design &#8226 Editorial design &#8226 Image editing & manipulation
                 </div>
                 <div class="bottom-card-info">
-                    signature
+                    <img src="../images/photoshopWhite.svg" alt="Adobe Photoshop icon"> <img src="../images/illustratorWhite.svg" alt="Adobe Illustrator icon"> <img src="../images/indesignWhite.svg" alt="Adobe InDesign icon">
                 </div>
                 <div id="front-card" class="image-2" onmouseover="translateBackcard();">
                 </div>
@@ -76,12 +72,10 @@
             <div id="card3" class="backcard" data-div>
                 <div class="title">
                     <h3 id="langTitle3">FRONT-END WEB DESIGN</h3>
-                </div>
-                <div class="description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, porro? Corporis deleniti explicabo pariatur cum iure suscipit voluptatem harum ratione, numquam, doloribus a obcaecati fugiat.
+                    Static pages &#8226 Vanilla JS, CSS, HTML &#8226 Learning Qwik framework
                 </div>
                 <div class="bottom-card-info">
-                    signature
+                    <img src="../images/htmlWhite.svg" alt="HTML5 icon"> <img src="../images/cssWhite.svg" alt="CSS3 icon"> <img src="../images/jsWhite.svg" alt="Javascript icon">
                 </div>
                 <div id="front-card" class="image-3" onmouseover="translateBackcard();">
                 </div>
@@ -89,13 +83,11 @@
 
             <div id="card4" class="backcard" data-div>
                 <div class="title">
-                    <h3 id="langTitle4">FOURTH TITLE</h3>
-                </div>
-                <div class="description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, porro? Corporis deleniti explicabo pariatur cum iure suscipit voluptatem harum ratione, numquam, doloribus a obcaecati fugiat.
+                    <h3 id="langTitle4">PHOTOGRAPHY AND VIDEO EDITING</h3>
+                    Photography &#8226 Video Editing &#8226 Motion Graphics
                 </div>
                 <div class="bottom-card-info">
-                    signature
+                    <img src="../images/davinciWhite.svg" alt="DaVinci Resolve icon"> <img src="../images/photoshopWhite.svg" alt="Adobe Photoshop icon"> <img src="../images/blenderWhite.svg" alt="Blender icon">
                 </div>
                 <div id="front-card" class="image-4" onmouseover="translateBackcard()">
                 </div>
