--- a/en/index.html
+++ b/en/index.html
@@ -51,7 +51,8 @@
                     Hard surface modeling &#8226 Archviz &#8226 Graphic Design support material &#8226 Texturing &  Procedural Shading &#8226 Animations &#8226 Game asset modding.
                 </div>
                 <div class="bottom-card-info">
-                    <img src="../images/blenderWhite.svg" alt="Blender icon">
+                    <img class="blender-icon" src="../images/blenderWhite.svg" alt="Blender icon">
+                    <div class="tooltip">Blender</div>
                 </div>
                 <div id="front-card" class="image-1" onmouseover="translateBackcard()">
                 </div>
@@ -63,7 +64,10 @@
                     Branding, Identity, & Logo design &#8226 Editorial design &#8226 Image editing & manipulation
                 </div>
                 <div class="bottom-card-info">
-                    <img src="../images/photoshopWhite.svg" alt="Adobe Photoshop icon"> <img src="../images/illustratorWhite.svg" alt="Adobe Illustrator icon"> <img src="../images/indesignWhite.svg" alt="Adobe InDesign icon">
+                    <img class="photoshop-icon" src="../images/photoshopWhite.svg" alt="Adobe Photoshop icon">
+                    <div class="tooltip">Photoshop</div> <img class="illustrator-icon" src="../images/illustratorWhite.svg" alt="Adobe Illustrator icon">
+                    <div class="tooltip">Illustrator</div> <img class="indesign-icon" src="../images/indesignWhite.svg" alt="Adobe InDesign icon">
+                    <div class="tooltip">InDesign</div>
                 </div>
                 <div id="front-card" class="image-2" onmouseover="translateBackcard();">
                 </div>
@@ -75,7 +79,10 @@
                     Static pages &#8226 Vanilla JS, CSS, HTML &#8226 Learning Qwik framework
                 </div>
                 <div class="bottom-card-info">
-                    <img src="../images/htmlWhite.svg" alt="HTML5 icon"> <img src="../images/cssWhite.svg" alt="CSS3 icon"> <img src="../images/jsWhite.svg" alt="Javascript icon">
+                    <img class="html-icon" src="../images/htmlWhite.svg" alt="HTML5 icon">
+                    <div class="tooltip">HTML</div> <img class="css-icon" src="../images/cssWhite.svg" alt="CSS3 icon">
+                    <div class="tooltip">CSS</div> <img class="js-icon" src="../images/jsWhite.svg" alt="Javascript icon">
+                    <div class="tooltip">Javascript</div>
                 </div>
                 <div id="front-card" class="image-3" onmouseover="translateBackcard();">
                 </div>
@@ -87,7 +94,10 @@
                     Photography &#8226 Video Editing &#8226 Motion Graphics
                 </div>
                 <div class="bottom-card-info">
-                    <img src="../images/davinciWhite.svg" alt="DaVinci Resolve icon"> <img src="../images/photoshopWhite.svg" alt="Adobe Photoshop icon"> <img src="../images/blenderWhite.svg" alt="Blender icon">
+                    <img class="davinci-icon" src="../images/davinciWhite.svg" alt="DaVinci Resolve icon">
+                    <div class="tooltip">DaVinci Resolve</div> <img class="photoshop-icon" src="../images/photoshopWhite.svg" alt="Adobe Photoshop icon">
+                    <div class="tooltip">Photoshop</div> <img class="blender-icon" src="../images/blenderWhite.svg" alt="Blender icon">
+                    <div class="tooltip">Blender</div>
                 </div>
                 <div id="front-card" class="image-4" onmouseover="translateBackcard()">
                 </div>
