--- a/en/index.html
+++ b/en/index.html
@@ -32,8 +32,8 @@
             <p class="word-anchor">Photography & Video</p>
             <svg class="icon-anchor" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: white;"><path d="M12 8c-2.168 0-4 1.832-4 4s1.832 4 4 4 4-1.832 4-4-1.832-4-4-4zm0 6c-1.065 0-2-.935-2-2s.935-2 2-2 2 .935 2 2-.935 2-2 2z"></path><path d="M20 5h-2.586l-2.707-2.707A.996.996 0 0 0 14 2h-4a.996.996 0 0 0-.707.293L6.586 5H4c-1.103 0-2 .897-2 2v11c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2zM4 18V7h3c.266 0 .52-.105.707-.293L10.414 4h3.172l2.707 2.707A.996.996 0 0 0 17 7h3l.002 11H4z"></path></svg>
         </a>
-        <div></div>
-        <div></div>
+        <div class="spacer"></div>
+        <div class="spacer"></div>
         <div class="english-button lang-active">
             <a class="long-lang">english</a>
             <a class="short-lang">en</a>
