--- a/en/index.html
+++ b/en/index.html
@@ -16,6 +16,7 @@
             <p class="word-anchor">About Me</p>
             <svg class="icon-anchor" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: white;"><path d="M12.71 2.29a1 1 0 0 0-1.42 0l-9 9a1 1 0 0 0 0 1.42A1 1 0 0 0 3 13h1v7a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-7h1a1 1 0 0 0 1-1 1 1 0 0 0-.29-.71zM6 20v-9.59l6-6 6 6V20z"></path></svg>
         </a>
+        <div class="spacer"></div>
         <a href="#card1" id="firstAnchor" class="anchors">
             <p class="word-anchor">3D Modeling</p>
             <svg class="icon-anchor" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: white;"><path d="M18 15c-.183 0-.358.022-.532.054L8.946 6.532C8.978 6.359 9 6.182 9 6c0-1.654-1.346-3-3-3S3 4.346 3 6c0 1.302.839 2.401 2 2.815v6.369A2.997 2.997 0 0 0 3 18c0 1.654 1.346 3 3 3a2.993 2.993 0 0 0 2.815-2h6.369a2.994 2.994 0 0 0 2.815 2c1.654 0 3-1.346 3-3S19.654 15 18 15zm-11 .184V8.816c.329-.118.629-.291.894-.508l7.799 7.799a2.961 2.961 0 0 0-.508.894h-6.37A2.99 2.99 0 0 0 7 15.184zM6 5a1.001 1.001 0 1 1-1 1c0-.551.448-1 1-1zm0 14a1.001 1.001 0 0 1 0-2 1.001 1.001 0 0 1 0 2zm12 0a1.001 1.001 0 0 1 0-2 1.001 1.001 0 0 1 0 2z"></path></svg>
@@ -32,7 +33,6 @@
             <p class="word-anchor">Photography & Video</p>
             <svg class="icon-anchor" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: white;"><path d="M12 8c-2.168 0-4 1.832-4 4s1.832 4 4 4 4-1.832 4-4-1.832-4-4-4zm0 6c-1.065 0-2-.935-2-2s.935-2 2-2 2 .935 2 2-.935 2-2 2z"></path><path d="M20 5h-2.586l-2.707-2.707A.996.996 0 0 0 14 2h-4a.996.996 0 0 0-.707.293L6.586 5H4c-1.103 0-2 .897-2 2v11c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2zM4 18V7h3c.266 0 .52-.105.707-.293L10.414 4h3.172l2.707 2.707A.996.996 0 0 0 17 7h3l.002 11H4z"></path></svg>
         </a>
-        <div class="spacer"></div>
         <div class="spacer"></div>
         <div class="english-button lang-active">
             <a class="long-lang">english</a>
@@ -61,7 +61,7 @@
                     <img class="blender-icon" src="../images/blenderWhite.svg" alt="Blender icon">
                     <div class="tooltip">Blender</div>
                 </div>
-                <div id="front-card" class="image-1" onmouseover="translateBackcard()">
+                <div id="front-card" class="image-1">
                 </div>
             </div>
 
@@ -76,14 +76,14 @@
                     <div class="tooltip">Illustrator</div> <img class="indesign-icon" src="../images/indesignWhite.svg" alt="Adobe InDesign icon">
                     <div class="tooltip">InDesign</div>
                 </div>
-                <div id="front-card" class="image-2" onmouseover="translateBackcard();">
+                <div id="front-card" class="image-2">
                 </div>
             </div>
 
             <div id="card3" class="backcard" data-div>
                 <div class="title">
                     <h3 id="langTitle3">FRONT-END WEB DESIGN</h3>
-                    Static pages &#8226 Vanilla JS, CSS, HTML &#8226 Learning Qwik framework
+                    Static pages &#8226 Vanilla JS, CSS, HTML &#8226 Learning Qwik & React framework
                 </div>
                 <div class="bottom-card-info">
                     <img class="html-icon" src="../images/htmlWhite.svg" alt="HTML5 icon">
@@ -91,14 +91,14 @@
                     <div class="tooltip">CSS</div> <img class="js-icon" src="../images/jsWhite.svg" alt="Javascript icon">
                     <div class="tooltip">Javascript</div>
                 </div>
-                <div id="front-card" class="image-3" onmouseover="translateBackcard();">
+                <div id="front-card" class="image-3">
                 </div>
             </div>
 
             <div id="card4" class="backcard" data-div>
                 <div class="title">
                     <h3 id="langTitle4">PHOTOGRAPHY AND VIDEO</h3>
-                    Photography &#8226 Video Editing &#8226 Motion Graphics
+                    Analog & Digital Photography &#8226 Video Editing &#8226 Motion Graphics
                 </div>
                 <div class="bottom-card-info">
                     <img class="davinci-icon" src="../images/davinciWhite.svg" alt="DaVinci Resolve icon">
@@ -106,7 +106,7 @@
                     <div class="tooltip">Photoshop</div> <img class="blender-icon" src="../images/blenderWhite.svg" alt="Blender icon">
                     <div class="tooltip">Blender</div>
                 </div>
-                <div id="front-card" class="image-4" onmouseover="translateBackcard()">
+                <div id="front-card" class="image-4">
                 </div>
             </div>
         </div>
