--- a/pt-BR/index.html
+++ b/pt-BR/index.html
@@ -6,102 +6,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pedro Lodi Portfolio</title>
 
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" type="text/css" href="../main.css">
 
     <link rel="icon" href="data:,">
 </head>
 <body>
     <div class="sidebar-container">
         <a href="#title" id="titleAnchor" class="anchors anchored">
-            Sobre Mim
+            <p class="word-anchor">Sobre Mim</p>
+            <svg class="icon-anchor" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: white;"><path d="M12.71 2.29a1 1 0 0 0-1.42 0l-9 9a1 1 0 0 0 0 1.42A1 1 0 0 0 3 13h1v7a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-7h1a1 1 0 0 0 1-1 1 1 0 0 0-.29-.71zM6 20v-9.59l6-6 6 6V20z"></path></svg>
         </a>
+        <div class="spacer"></div>
         <a href="#card1" id="firstAnchor" class="anchors">
-            Modelagem 3D
+            <p class="word-anchor">Modelagem 3D</p>
+            <svg class="icon-anchor" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: white;"><path d="M18 15c-.183 0-.358.022-.532.054L8.946 6.532C8.978 6.359 9 6.182 9 6c0-1.654-1.346-3-3-3S3 4.346 3 6c0 1.302.839 2.401 2 2.815v6.369A2.997 2.997 0 0 0 3 18c0 1.654 1.346 3 3 3a2.993 2.993 0 0 0 2.815-2h6.369a2.994 2.994 0 0 0 2.815 2c1.654 0 3-1.346 3-3S19.654 15 18 15zm-11 .184V8.816c.329-.118.629-.291.894-.508l7.799 7.799a2.961 2.961 0 0 0-.508.894h-6.37A2.99 2.99 0 0 0 7 15.184zM6 5a1.001 1.001 0 1 1-1 1c0-.551.448-1 1-1zm0 14a1.001 1.001 0 0 1 0-2 1.001 1.001 0 0 1 0 2zm12 0a1.001 1.001 0 0 1 0-2 1.001 1.001 0 0 1 0 2z"></path></svg>
         </a>
         <a href="#card2" id="secondAnchor" class="anchors">
-            Design Gráfico
+            <p class="word-anchor">Design Gráfico</p>
+            <svg class="icon-anchor" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: white;"><path d="M18.404 2.998c-.757-.754-2.077-.751-2.828.005l-1.784 1.791L11.586 7H7a.998.998 0 0 0-.939.658l-4 11c-.133.365-.042.774.232 1.049l2 2a.997.997 0 0 0 1.049.232l11-4A.998.998 0 0 0 17 17v-4.586l2.207-2.207v-.001h.001L21 8.409c.378-.378.586-.881.585-1.415 0-.535-.209-1.038-.588-1.415l-2.593-2.581zm-3.111 8.295A.996.996 0 0 0 15 12v4.3l-9.249 3.363 4.671-4.671c.026.001.052.008.078.008A1.5 1.5 0 1 0 9 13.5c0 .026.007.052.008.078l-4.671 4.671L7.7 9H12c.266 0 .52-.105.707-.293L14.5 6.914 17.086 9.5l-1.793 1.793zm3.206-3.208-2.586-2.586 1.079-1.084 2.593 2.581-1.086 1.089z"></path></svg>
         </a>
         <a href="#card3" id="thirdAnchor" class="anchors">
-            Web Design Front-end
+            <p class="word-anchor">Web Design Front-end</p>
+            <svg class="icon-anchor" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: white;"><path d="M12 14h6v2h-6zM6.293 9.707 8.586 12l-2.293 2.293 1.414 1.414L11.414 12 7.707 8.293z"></path><path d="M20 4H4c-1.103 0-2 .897-2 2v12c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V6c0-1.103-.897-2-2-2zM4 18V6h16l.002 12H4z"></path></svg>
         </a>
         <a href="#card4" id="fourthAnchor" class="anchors">
-            Cartão Quatro
+            <p class="word-anchor">Fotografia & Vídeo</p>
+            <svg class="icon-anchor" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: white;"><path d="M12 8c-2.168 0-4 1.832-4 4s1.832 4 4 4 4-1.832 4-4-1.832-4-4-4zm0 6c-1.065 0-2-.935-2-2s.935-2 2-2 2 .935 2 2-.935 2-2 2z"></path><path d="M20 5h-2.586l-2.707-2.707A.996.996 0 0 0 14 2h-4a.996.996 0 0 0-.707.293L6.586 5H4c-1.103 0-2 .897-2 2v11c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2zM4 18V7h3c.266 0 .52-.105.707-.293L10.414 4h3.172l2.707 2.707A.996.996 0 0 0 17 7h3l.002 11H4z"></path></svg>
         </a>
-        <div></div>
-        <div></div>
+        <div class="spacer"></div>
         <div class="english-button">
-            <a href="../en/" data-reload>english</a>
+            <a class="long-lang" href="../en/">english</a>
+            <a class="short-lang" href="../en/">en</a>
         </div>
         <div class="portugues-button lang-active">
-            <a data-reload>português</a>
+            <a class="long-lang">português</a>
+            <a class="short-lang">pt</a>
         </div>
     </div>
     <div class="wrapper">
         <div id="main">
             <div id="title" class="title-style" data-div>
-                <h1 id="langTitle">Oi, sou Pedro Lodi.</h1>
-                <p id="langAboutMe">Estou estudando Design Gráfico e busco me especializar em modelagem 3D e web design front-end.</p>
+                <h1 id="langTitle">Oi, sou <span class="underline-name">Pedro Lodi</span>.</h1>
+                <p id="langAboutMe">Estudo <span class="underline-gd">Design Gráfico</span> e estou me especializando em <span class="underline-3d">modelagem 3D</span> e <span class="underline-web">web design front-end</span>.</p>
             </div>
             <div id="langScroll" class="scroll-advice">
-                Desça a página
+                desça a página
             </div>
             <div id="card1" class="backcard" data-div>
                 <div class="title">
                     <h3 id="langTitle1">MODELAGEM 3D</h3>
-                </div>
-                <div class="description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, porro? Corporis deleniti explicabo pariatur cum iure suscipit voluptatem harum ratione, numquam, doloribus a obcaecati fugiat.
+                    Modelagem de produto &#8226 Archviz &#8226 Material de suporte para design gráfico &#8226 Textura & shader procedural &#8226 Animações &#8226 Mods para games.
                 </div>
                 <div class="bottom-card-info">
-                    software: Blender 3D [icon].
+                    <img class="blender-icon" src="../images/blenderWhite.svg" alt="Blender icon">
+                    <div class="tooltip">Blender</div>
                 </div>
-                <div id="front-card">
-                    image
+                <div id="front-card" class="image-1">
                 </div>
             </div>
 
             <div id="card2" class="backcard" data-div>
                 <div class="title">
                     <h3 id="langTitle2">DESIGN GRÁFICO</h3>
-                </div>
-                <div class="description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, porro? Corporis deleniti explicabo pariatur cum iure suscipit voluptatem harum ratione, numquam, doloribus a obcaecati fugiat.
+                    Branding, Identidadee, & Design de logo &#8226 Design editorial &#8226 Edição e manipulação de imagem
                 </div>
                 <div class="bottom-card-info">
-                    signature
+                    <img class="photoshop-icon" src="../images/photoshopWhite.svg" alt="Adobe Photoshop icon">
+                    <div class="tooltip">Photoshop</div> <img class="illustrator-icon" src="../images/illustratorWhite.svg" alt="Adobe Illustrator icon">
+                    <div class="tooltip">Illustrator</div> <img class="indesign-icon" src="../images/indesignWhite.svg" alt="Adobe InDesign icon">
+                    <div class="tooltip">InDesign</div>
                 </div>
-                <div id="front-card">
-                    image
+                <div id="front-card" class="image-2">
                 </div>
             </div>
 
             <div id="card3" class="backcard" data-div>
                 <div class="title">
                     <h3 id="langTitle3">WEB DESIGN FRONT-END</h3>
-                </div>
-                <div class="description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, porro? Corporis deleniti explicabo pariatur cum iure suscipit voluptatem harum ratione, numquam, doloribus a obcaecati fugiat.
+                    Páginas estáticas &#8226 JavaScript, CSS, HTML &#8226 Aprendendo Qwik & React Native
                 </div>
                 <div class="bottom-card-info">
-                    signature
+                    <img class="html-icon" src="../images/htmlWhite.svg" alt="HTML5 icon">
+                    <div class="tooltip">HTML</div> <img class="css-icon" src="../images/cssWhite.svg" alt="CSS3 icon">
+                    <div class="tooltip">CSS</div> <img class="js-icon" src="../images/jsWhite.svg" alt="Javascript icon">
+                    <div class="tooltip">Javascript</div>
                 </div>
-                <div id="front-card">
-                    image
+                <div id="front-card" class="image-3">
                 </div>
             </div>
 
             <div id="card4" class="backcard" data-div>
                 <div class="title">
                     <h3 id="langTitle4">QUARTO TÍTULO</h3>
-                </div>
-                <div class="description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, porro? Corporis deleniti explicabo pariatur cum iure suscipit voluptatem harum ratione, numquam, doloribus a obcaecati fugiat.
+                    Fotografia Digital & Analógica &#8226 Edição de Vídeo &#8226 Motion Graphics
                 </div>
                 <div class="bottom-card-info">
-                    signature
+                    <img class="davinci-icon" src="../images/davinciWhite.svg" alt="DaVinci Resolve icon">
+                    <div class="tooltip">DaVinci Resolve</div> <img class="photoshop-icon" src="../images/photoshopWhite.svg" alt="Adobe Photoshop icon">
+                    <div class="tooltip">Photoshop</div> <img class="blender-icon" src="../images/blenderWhite.svg" alt="Blender icon">
+                    <div class="tooltip">Blender</div>
                 </div>
-                <div id="front-card">
-                    image
+                <div id="front-card" class="image-4">
                 </div>
             </div>
         </div>
