--- a/en/index.html
+++ b/en/index.html
@@ -83,7 +83,7 @@
             <div id="card3" class="backcard" data-div>
                 <div class="title">
                     <h3 id="langTitle3">FRONT-END WEB DESIGN</h3>
-                    Static pages &#8226 Vanilla JS, CSS, HTML &#8226 Learning Qwik & React framework
+                    Static pages &#8226 Vanilla JS, CSS, HTML &#8226 Learning Qwik & React Native
                 </div>
                 <div class="bottom-card-info">
                     <img class="html-icon" src="../images/htmlWhite.svg" alt="HTML5 icon">
